# drm-raytracer

./: Readme.md  main.c  meson.build
include/: color.h  common.h  draw.h  drm_helper.h  elements.h  light.h  object.h  plane.h  ray.h  scene.h  sphere.h  sunlight.h  texture.h  vector.h
src/: color.c  draw.c  drm_helper.c  elements.c  light.c  object.c  plane.c  ray.c  scene.c  sphere.c  texture.c  vector.c
